--- a/music-finder/index.html
+++ b/music-finder/index.html
@@ -31,6 +31,7 @@
         setTimeout(explode, 2000);
     }
 </script>
+<script src="https://cdn.optimizely.com/js/7105930176.js"></script>
 
 </head>
 
